# bousouBot-bot

./: .breakpoints  .replit  eval.py  main.py  pyproject.toml  requirements.txt  run.sh  util.py  webserver.py
.cache/replit/: __replit_disk_meta.json
json/: config.json  eew.json  eew_channel.json  help.json
modules/: admin.py  aki.py  command.py  earthquake.py  global.py  owners.py  tasks.py
