[tool.poetry]
name = "repl_python3_beta_replit"
version = "0.1.0"
description = ""
authors = ["nox31monss001 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
replit = "^3.2.4"
Flask = "^2.0.3"
aiohttp = "^3.8.1"
moon-tools = "^1.0.0"
wavelink = "^1.3.4"
humanfriendly = "^10.0"
TagScriptEngine = "^2.3.0"
akinator = "^1.0.3"
timedelta = "^2020.12.3"
requests = "^2.28.2"
bs4 = "^0.0.1"
aioschedule = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
